HHH-20497 - Improve bootstrap
Signed-off-by: Steve Ebersole <steve@hibernate.org>